# autohotkey

./: .cursorrules  .gitignore  .prompt.md  Documentación.md  chat.db  cleanear.py  comandos.ahk  evolution.session.sql  git_commands.ps1  git_commands.sh  hotkeys.json  hotkeys_clean.json  index.html  pyntpu_proyect.py  requirements.txt  toogle_gemini.ahk  toogle_gemini_2.ahk
keyboard-visualizer-tauri/: package.json  pnpm-lock.yaml
keyboard-visualizer-tauri/src/: App.css  App.tsx
keyboard-visualizer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
keyboard-visualizer-tauri/src-tauri/src/: main.rs
keyboard_visualizer/: index.html  main.js  package-lock.json  package.json  shortcuts.json  visualizer.ahk
keyboard_visualizer/src-tauri/: Cargo.toml  tauri.conf.json
utils/: .gitignore  README.md  WarpTerminalProblem.md
