[package]
name = "keyboard-visualizer"
version = "1.0.0"
description = "Visualizador de atajos de teclado"
authors = [""]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["fs-read-file", "path-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = "debuginfo"
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s" 